# lab3-Sivtsev

./: .gitignore  CMakeLists.txt  arg.c  arg.h  container.c  container.h  data.csv  io.c  io.h  main.c  out.csv  sort.c  sort.h  sorted.csv  struct.c  struct.h
